# PocketBookTest

./: .gitignore  CMakeLists.txt  README.md
Codec/: CMakeLists.txt  Codec_global.h  codec.cpp  codec.h  rawimagedata.h
CodecTest/: CMakeLists.txt  tst_codectest.cpp
GUI/: CMakeLists.txt  codecthread.cpp  codecthread.h  imagestablemodel.cpp  imagestablemodel.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
